# oboe-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  default.nix
.cargo/: config
.github/workflows/: rust.yml
demo/: Cargo.toml  README.md  mobile.toml  release.keystore
demo/src/: audio.rs  lib.rs  window.rs
oboe/: Cargo.toml  Makefile  README.md
oboe-demo/: Cargo.toml
oboe-demo/src/: audio.rs  main.rs
oboe-sys/: Cargo.toml  Makefile  README.md  build.rs
oboe-sys/oboe-ext/: CMakeLists.txt
oboe-sys/oboe-ext/include/: wrapper.h
oboe-sys/oboe-ext/include/oboe/: AudioStreamCallbackWrapper.h  OboeExt.h
oboe-sys/oboe-ext/src/: AudioStreamBuilderWrapper.cpp  AudioStreamCallbackWrapper.cpp  AudioStreamWrapper.cpp  UtilitiesWrapper.cpp
oboe-sys/src/: bindings_aarch64.rs  bindings_armv7.rs  bindings_i686.rs  lib.rs
oboe/src/: audio_stream.rs  audio_stream_base.rs  audio_stream_builder.rs  audio_stream_callback.rs  definitions.rs  java_interface.rs  lib.rs  private.rs  type_guide.rs  version.rs
oboe/src/java_interface/: audio_features.rs  definitions.rs  devices_info.rs  stream_defaults.rs  utils.rs
src/: audio_stream.rs  audio_stream_base.rs  audio_stream_builder.rs  audio_stream_callback.rs  definitions.rs  java_interface.rs  lib.rs  private.rs  type_guide.rs
src/java_interface/: audio_features.rs  definitions.rs  devices_info.rs  stream_defaults.rs  utils.rs
sys/: Cargo.toml  README.md  build.rs
sys/oboe-ext/: CMakeLists.txt
sys/oboe-ext/include/oboe/: OboeExt.h
sys/oboe-ext/src/: AudioStreamBuilderWrapper.cpp  AudioStreamCallbackWrapper.cpp  AudioStreamWrapper.cpp
sys/src/: bindings_aarch64.rs  bindings_armv7.rs  bindings_i686.rs  bindings_x86_64.rs  lib.rs
