[workspace]
members = [
  "oboe-sys",
  "oboe",
  "oboe-demo",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[patch.crates-io]
winit = { git = "https://github.com/rust-windowing/winit" }
glutin = { git = "https://github.com/katyo/glutin", branch = "android-support" }

