[package]
name = "oboe"
version = "0.4.6"
description = "Safe interface for oboe an android library for low latency audio IO"
categories = ["api-bindings", "multimedia::audio"]
keywords = ["oboe", "android", "audio", "aaudio", "opensles"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/katyo/oboe-rs"
edition = "2018"
include = ["/src/**/*.rs", "/README.md"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dependencies.oboe-sys]
version = "0.4.5"
path = "sys"

[dependencies.ndk]
version = "0.7"
optional = true

[dependencies.ndk-context]
version = "0.1"
optional = true

[dependencies.jni]
version = "0.19"
optional = true

[features]
shared-link = ["oboe-sys/shared-link"]
shared-stdcxx = ["oboe-sys/shared-stdcxx"]
generate-bindings = ["oboe-sys/generate-bindings"]
fetch-prebuilt = ["oboe-sys/fetch-prebuilt"]
java-interface = ["ndk", "ndk-context", "jni"]
doc-cfg = []

[package.metadata.docs.rs]
features = ["java-interface", "doc-cfg"]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]

[workspace]
members = ["sys", "demo"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
