[workspace]
members = ["sys", "demo"]
resolver = "2"

[workspace.package]
version = "0.6.1"
keywords = ["oboe", "android", "audio", "aaudio", "opensles"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
repository = "https://github.com/katyo/oboe-rs"
homepage = "https://github.com/katyo/oboe-rs"
edition = "2021"

[workspace.dependencies]
num-traits = "0.2"
num-derive = "0.4"
atomic_float = "0.1"
ndk-context = "0.1"
ndk-glue = "0.7"
jni = "0.21"
cc = "1"
bindgen = "0.69"
fetch_unroll = "0.3"
glutin = "0.31"
log = "0.4"
android_logger = "0.13"

[workspace.dependencies.oboe-sys]
version = "0.6"
path = "sys"

[workspace.dependencies.oboe]
version = "0.6"
path = ""

[workspace.dependencies.egui-winit]
version = "0.26"
default-features = false

[workspace.dependencies.eframe]
version = "0.26"
default-features = false

[workspace.dependencies.ndk]
version = "0.8"
default-features = false

[package]
name = "oboe"
version.workspace = true
description = "Safe interface for oboe an android library for low latency audio IO"
categories = ["api-bindings", "multimedia::audio"]
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
edition.workspace = true
include = ["/src/**/*.rs", "/README.md"]

[dependencies]
num-traits.workspace = true
num-derive.workspace = true
oboe-sys.workspace = true

[dependencies.ndk]
workspace = true
optional = true
default-features = false

[dependencies.ndk-context]
workspace = true
optional = true

[dependencies.jni]
workspace = true
optional = true

[features]
shared-link = ["oboe-sys/shared-link"]
shared-stdcxx = ["oboe-sys/shared-stdcxx"]
generate-bindings = ["oboe-sys/generate-bindings"]
fetch-prebuilt = ["oboe-sys/fetch-prebuilt"]
java-interface = ["ndk", "ndk-context", "jni"]
doc-cfg = []

[package.metadata.docs.rs]
features = ["java-interface", "doc-cfg"]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]

[profile.release]
opt-level = 'z'
strip = true
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
