[package]
name = "oboe-demo"
description = "Simple sine-wave playing demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

#[[bin]]
#name = "oboe-demo-desktop"
#path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-dependencies = [
    "com.google.android.material:material:1.11.0",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-permissions = [
  # "android.permission.WRITE_EXTERNAL_STORAGE",
  "android.permission.RECORD_AUDIO",
]
app-features = [
  "android.hardware.audio.output",
  "android.hardware.microphone",
  "android.hardware.audio.low_latency",
]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[dependencies]
log.workspace = true
atomic_float.workspace = true
android_logger.workspace = true

[dependencies.oboe]
workspace = true
features = [
  #"generate-bindings",
  "java-interface",
  "shared-stdcxx",
]

[dependencies.egui-winit]
workspace = true

[dependencies.eframe]
workspace = true
features = ["wgpu", "default_fonts"]

[features]
default = ["android-native-activity"]
android-native-activity = ["eframe/android-native-activity", "egui-winit/android-native-activity"]
android-game-activity = ["eframe/android-native-activity", "egui-winit/android-game-activity"]
