[package]
name = "oboe-demo"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.oboe]
path = "../oboe"
#features = ["generate-bindings"]
#features = ["generate-bindings", "compile-library"]
#features = ["compile-library", "java-interface"]
#features = ["compile-library", "generate-bindings", "java-interface"]
features = ["java-interface"]

[dependencies.apl]
git = "https://github.com/katyo/mixui"

[dependencies.sgl]
git = "https://github.com/katyo/mixui"

[package.metadata.android]
android_version = 28
target_sdk_version = 28
min_sdk_version = 16
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
#build_targets = ["aarch64-linux-android"]
#build_targets = ["armv7-linux-androideabi"]
#build_targets = ["i686-linux-android"]
#build_targets = ["x86_64-linux-android"]
#build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android"]
package_name = "org.illumium.rust-oboe-demo"
label = "Android oboe demo"
version_code = 100
version_name = "0.1.0"
#res = "res"
#icon = "@mipmap/ic_launcher"
fullscreen = false
opengles_version_major = 2
opengles_version_minor = 0

[[package.metadata.android.feature]]
name = "android.hardware.audio.output"
required = false

[[package.metadata.android.feature]]
name = "android.hardware.microphone"
required = false

[[package.metadata.android.feature]]
name = "android.hardware.audio.low_latency"
required = false

[[package.metadata.android.permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.permission]]
name = "android.permission.RECORD_AUDIO"
