[package]
name = "oboe-demo"
description = "Simple sine-wave playing demo"
version = "0.3.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.oboe]
path = "../oboe"
version = "0.3.0"
#features = ["generate-bindings"]
features = ["java-interface"]
#features = ["generate-bindings", "java-interface"]
#features = ["java-interface"]
optional = true

[dependencies.ndk-glue]
version = "0.2.0"
features = ["logger"]

[dependencies.android_logger]
version = "0.8"

[dependencies.log]
version = "0.4"

[dependencies.glutin]
version = "0.24"

[features]
default = ["audio"]
audio = ["oboe"]
fetch-prebuilt-oboe = ["oboe/fetch-prebuilt"]
shared-oboe = ["oboe/shared-link"]
shared-stdcxx = ["oboe/shared-stdcxx"]

[package.metadata.android]
android_version = 28
target_sdk_version = 28
min_sdk_version = 16
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
#build_targets = ["aarch64-linux-android"]
#build_targets = ["armv7-linux-androideabi"]
#build_targets = ["i686-linux-android"]
#build_targets = ["x86_64-linux-android"]
package_name = "org.illumium.rust-oboe-demo"
label = "Android oboe demo"
version_code = 100
version_name = "0.1.2"
#res = "res"
#icon = "@mipmap/ic_launcher"
fullscreen = false
opengles_version_major = 2
opengles_version_minor = 0

[[package.metadata.android.feature]]
name = "android.hardware.audio.output"
required = false

[[package.metadata.android.feature]]
name = "android.hardware.microphone"
required = false

[[package.metadata.android.feature]]
name = "android.hardware.audio.low_latency"
required = false

[[package.metadata.android.permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.permission]]
name = "android.permission.RECORD_AUDIO"
