[package]
name = "oboe-sys"
version = "0.1.0"
description = "Unsafe bindings for oboe an android library for low latency audio IO"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["oboe", "android", "audio", "aaudio", "opensles"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
repository = "https://github.com/katyo/oboe-rs"
edition = "2018"
include = ["/lib/lib*.a", "/src/*.rs", "/oboe-ext", "/README.md"]

[badges]
maintenance = { status = "experimental" }

[build-dependencies.git2]
version = "0.11"
optional = true

[build-dependencies.cmake]
version = "0.1"
optional = true

[build-dependencies.bindgen]
version = "0.52"
optional = true

[features]
static-link = []
generate-bindings = ["bindgen", "git2"]
compile-library = ["cmake", "git2"]
rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]
