[package]
name = "oboe-sys"
version = "0.1.2"
description = "Unsafe bindings for oboe an android library for low latency audio IO"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["oboe", "android", "audio", "aaudio", "opensles"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/katyo/oboe-rs"
edition = "2018"
include = ["/src/*.rs", "/oboe-ext", "/README.md"]

[badges]
maintenance = { status = "experimental" }

[build-dependencies.fetch_unroll]
version = "0.2"
#optional = true

[build-dependencies.cmake]
version = "0.1"
optional = true

[build-dependencies.bindgen]
version = "0.55"
optional = true

[features]
static-link = []
generate-bindings = ["bindgen"]
compile-library = ["cmake"]
rustdoc = []
test = []

[package.metadata.docs.rs]
features = ["rustdoc"]
