[package]
name = "oboe"
version = "0.1.0"
description = "Safe interface for oboe an android library for low latency audio IO"
categories = ["api-bindings", "multimedia::audio"]
keywords = ["oboe", "android", "audio", "aaudio", "opensles"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
repository = "https://github.com/katyo/oboe-rs"
edition = "2018"
include = ["/src/**/*.rs", "/README.md"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dependencies.oboe-sys]
version = "0.1.0"
path = "../oboe-sys"

[dependencies.android-ndk]
git = "https://github.com/rust-windowing/android-ndk-rs"
version = "*"
optional = true

[dependencies.android_glue]
git = "https://github.com/rust-windowing/android-rs-glue"
version = "*"
optional = true

[dependencies.jni]
version = "0.14"
optional = true

[features]
static-link = ["oboe-sys/static-link"]
generate-bindings = ["oboe-sys/generate-bindings"]
compile-library = ["oboe-sys/compile-library"]
java-interface = ["android-ndk", "android_glue", "jni"]
rustdoc = ["oboe-sys/rustdoc", "android-ndk/rustdoc", "java-interface"]

[package.metadata.docs.rs]
features = ["rustdoc"]
