[package]
name = "oboe"
version = "0.1.2"
description = "Safe interface for oboe an android library for low latency audio IO"
categories = ["api-bindings", "multimedia::audio"]
keywords = ["oboe", "android", "audio", "aaudio", "opensles"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/katyo/oboe-rs"
edition = "2018"
include = ["/src/**/*.rs", "/README.md"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dependencies.oboe-sys]
version = "0.1.2"
path = "../oboe-sys"

[dependencies.ndk]
version = "0.2"
optional = true

[dependencies.ndk-glue]
version = "0.2"
optional = true

[dependencies.jni]
version = "0.14"
optional = true

[features]
shared-link = ["oboe-sys/shared-link"]
generate-bindings = ["oboe-sys/generate-bindings"]
compile-library = ["oboe-sys/compile-library"]
java-interface = ["ndk", "ndk-glue", "jni"]
rustdoc = ["oboe-sys/rustdoc", "ndk/rustdoc", "java-interface"]

[package.metadata.docs.rs]
features = ["rustdoc"]
