[package]
name = "oboe-sys"
version = "0.4.5"
description = "Unsafe bindings for oboe an android library for low latency audio IO"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["oboe", "android", "audio", "aaudio", "opensles"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/katyo/oboe-rs"
edition = "2018"
include = ["/build.rs", "/src/*.rs", "/oboe/include", "/oboe/src", "/oboe-ext/include", "/oboe-ext/src", "/README.md"]

[badges]
maintenance = { status = "experimental" }

[build-dependencies.fetch_unroll]
version = "0.3"
optional = true

[build-dependencies.cc]
version = "1.0"
features = ["parallel"]

[build-dependencies.bindgen]
version = "0.60"
optional = true

[features]
shared-link = []
generate-bindings = ["bindgen"]
fetch-prebuilt = ["fetch_unroll"]
shared-stdcxx = []
test = []

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
